DDF-5117 Fixed inconsistent spacing between filters

--- a/ui/packages/catalog-ui-search/src/main/webapp/component/dropdown/query-src/dropdown.query-src.less
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/dropdown/query-src/dropdown.query-src.less
@@ -3,7 +3,7 @@
   display: block;
   white-space: nowrap;
   overflow: hidden;
-  padding: 1.5rem;
+  padding: @minimumSpacing 1.5rem;
 
   .dropdown-text {
     display: inline-block;
@@ -89,6 +89,5 @@
     line-height: @minimumButtonSize;
     text-align: center;
     font-size: @largeFontSize;
-    margin-left: -4px;
   }
 }
