--- a/ui/packages/catalog-ui-search/src/main/webapp/component/filter-builder/filter-builder.less
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/filter-builder/filter-builder.less
@@ -78,7 +78,6 @@
   }
 
   > .filter-contents {
-    margin-right: @minimumSpacing;
     position: relative;
   }
 
