--- a/ui/packages/catalog-ui-search/src/main/webapp/component/sort-item/sort-item.less
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/sort-item/sort-item.less
@@ -23,6 +23,7 @@
   @{customElementNamespace}sort-item:not(:first-of-type) {
     .sort-remove {
       display: inline-block;
+      margin-right: 1.5rem;
     }
   }
 
