--- a/ui/packages/catalog-ui-search/src/main/webapp/react-component/location/location.less
+++ b/ui/packages/catalog-ui-search/src/main/webapp/react-component/location/location.less
@@ -1,6 +1,5 @@
 @{reactNamespace}location {
   display: block;
-
   width: auto;
 
   .location-draw {
@@ -51,8 +50,8 @@
     }
 
     min-height: 1px;
-    padding-right: 15px;
-    padding-left: 15px;
+    margin-top: 15px;
+    margin-bottom: 0px;
     max-width: 2 * @minimumScreenSize;
     float: none;
     width: 100%;
